Video looping background

--- a/bluegold.html
+++ b/bluegold.html
@@ -12,7 +12,10 @@
 
 <body>
 
-<section id="main"><img src="assets/images/01.jpg" alt="" id="mainPhoto" /></section>
+<video id="bgVideo" controls preload="true" autoplay loop muted>
+    <source src="assets/landscape.mp4" type="video/mp4" /> 
+</video>
+<section id="main"><img src="assets/images/01.png" alt="" id="mainPhoto" /></section>
 <section id="sidebar">You need JavaScript enabled to use this application.</section>
 <section id="prayerbar"></section>
 
