--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
 
-<section id="main"><img src="assets/images/01.jpg" alt="" id="mainPhoto" /></section>
+<video id="bgVideo" controls preload="true" autoplay loop muted style="width: 100%; opacity: 0.2;">
+    <source src="assets/landscape.mp4" type="video/mp4" /> 
+</video>
+<section id="main"><img src="assets/images/01.png" alt="" id="mainPhoto" style="background-color: rgba(0,0,0,0.2);" /></section>
 <section id="sidebar">You need JavaScript enabled to use this application.</section>
 <section id="prayerbar"></section>
 
